feat: login and signup with jwt token

--- a/.env.sample
+++ b/.env.sample
@@ -2,5 +2,13 @@ PORT = 3000
 
 NODE_ENV = "development"
 
+APP_NAME = CRM
 APP_URL=crm.com
 SUPPORT_EMAIL=support@${APP_URL}
+
+JWT_ACCESS_TOKEN_SECRET = "access"
+JWT_ACCESS_TOKEN_EXPIRE = 600
+
+JWT_REFRESH_TOKEN_SECRET = "refresh"
+JWT_REFRESH_TOKEN_EXPIRE = 3600
+
