login and signup completed

--- a/.env.sample
+++ b/.env.sample
@@ -6,9 +6,9 @@ APP_NAME = CRM
 APP_URL=crm.com
 SUPPORT_EMAIL=support@${APP_URL}
 
-JWT_ACCESS_TOKEN_SECRET = "access"
+JWT_ACCESS_TOKEN_SECRET = "ozW4j6PuLA1vtLNnaEAHUMMubuqeLuQE"
 JWT_ACCESS_TOKEN_EXPIRE = 600
 
-JWT_REFRESH_TOKEN_SECRET = "refresh"
+JWT_REFRESH_TOKEN_SECRET = "AyZRER0DsSKz2kHFyjsk872NrHue7X1x"
 JWT_REFRESH_TOKEN_EXPIRE = 3600
 
